[tool.poetry]
name = "VecSim"
version = "0.0.1"
description = "Python library around collection of vector similarity algorithms"
build = "setup.py"

packages = [
    { include = 'src'}
]

authors = ["RedisLabs CTO Team <oss@redislabs.com>"]
license = "BSD-3-Clause"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 3 - Alpha',
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
numpy = "^1.21"
tox = "^3.25.0"
tox-poetry = "^0.4.0"
hnswlib = "^0.6.2"
pytest = "^6.2.4"
scipy = "^1.9.1"
h5py = "^3.7.0"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
