[tool.poetry]
name = "VecSim"
version = "0.0.1"
description = "Python library around collection of vector similarity algorithms"

packages = [
    { include = 'src'}
]

authors = ["RedisLabs CTO Team <oss@redislabs.com>"]
license = "BSD-3-Clause"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 3 - Alpha',
]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.3.0"
numpy = "*"
hnswlib = "^0.6.2"
pytest = "^8.3"
scipy = "^1.14.1"
h5py = "^3.7.0"
ml_dtypes = "*"



[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script  = "setup.py"
generate-setup-file = true
