[package]
name = "vecsim-c"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C-compatible FFI bindings for the VecSim vector similarity search library"

[lib]
name = "vecsim_c"
crate-type = ["staticlib", "cdylib"]

[dependencies]
vecsim = { path = "../vecsim" }
half = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
