[package]
name = "vecsim-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "VecSim"
crate-type = ["cdylib"]

[dependencies]
vecsim = { path = "../vecsim" }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
numpy = "0.24"
ndarray = "0.16"
half = { version = "2.4", features = ["num-traits"] }
rayon = "1.10"
