[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "VecSim"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
