[package]
name = "vecsim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance vector similarity search library with BruteForce and HNSW indices"

[dependencies]
rayon = { workspace = true }
parking_lot = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
memmap2 = { workspace = true }

[features]
default = []
nightly = []  # Enable nightly-only SIMD intrinsics

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "brute_force_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "tiered_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false
